Fix gray overflow on question detail page

--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -4,17 +4,16 @@
 }
 
 div.detail-page {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 52px;
-  bottom: 0;
+  // left: 0;
+  // right: 0;
+  // top: 52px;
+  // bottom: 0;
   z-index: -1;
   background-color: #fff;
 
   display: flex;
   justify-content: center;
-  margin-top: -82px;
+  margin-top: -30px;
   padding-top: 30px;
   padding-left: 32px;
   padding-right: 32px;
